@startuml

class Schedule << Model >>
class Talk << Model >>
class Room << Model >>
class Speaker << Model >>

class ScheduleRepository << DAO >>
class ScheduleEndpoint << REST Endpoint >>

ScheduleEndpoint ..> ScheduleRepository
ScheduleRepository ..> Schedule
Schedule --> Talk
Schedule --> Room
Schedule --> Speaker

@enduml
